--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-autosuggest": "^2.0.4",
     "vue-chartjs": "^3.5.0",
     "vue-color": "^2.7.0",
+    "vue-js-modal": "^1.3.33",
     "vue-scrollto": "^2.17.1",
     "vue2-dropzone": "^3.6.0",
     "vuedraggable": "^2.23.2"
